Se modifica el Store Procedure y se aplican cambios a estos archivos, esta modificación se realizó ya que se mostraban los códigos del plan alimenticio y del tipo de hotel y se tenian que realmente ver los nombres de estos últimos

--- a/views/hotel/buscarHoteles.phtml
+++ b/views/hotel/buscarHoteles.phtml
@@ -175,8 +175,8 @@ function initialize(lat, lon, nombre, id) {
                                 }
                               
                               $detalleHoteles.= '<tr class="colorText">'                              
-                                    . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getTipoh().'</td>'
-                                    . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getPalimt().'</td>'
+                                    . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getTipoh_nombre().'</td>'
+                                    . '<td style="padding: 2px; vertical-align: middle;">'.$objTipoH->getPalimt_nombre().'</td>'
                                     . '<td style="color: #DF5F00; font-weight: bold; padding: 2px; vertical-align: middle;">'.$monedaHot.' '.$objTipoH->getPrecioFinal().'</td>'
                                     . '<td style="padding: 2px; vertical-align: middle;">'
                                     
